# semantic-split

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
semantic_split/: SentenceSimilarity.py  __init__.py
semantic_split/splitters/: SimilarSentenceSplitter.py  SpacySentenceSplitter.py  Splitter.py
tests/: test_sentence_similarity.py  utls.py
tests/splitters/: test_similar_sentences_splitter.py
tests/test_files/: sentences.txt
